--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "roboto-fontface": "^0.10.0",
     "vue": "^3.2.47"
   },
   "devDependencies": {
